<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bgm2"
            android:id="@+id/bac_gra_main"
            android:contentDescription="@string/bacgr"
            android:scaleType="centerCrop" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/pig"
            android:id="@+id/img_pig"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="216dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/text_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/b_next"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/img_pig"
            android:layout_marginTop="208dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/two_style_btn_black95"/>
</androidx.constraintlayout.widget.ConstraintLayout>